# job-finder

./: .env.example  .gitignore  AGENTS.md  README.md  findings.old.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/job_finder/: __init__.py  aena_fetcher.py  aena_parser.py  boc_fetcher.py  boc_parser.py  boe_fetcher.py  boe_parser.py  bop_fetcher.py  bop_parser.py  config_prompts.yaml  epso_fetcher.py  epso_parser.py  eulisa_fetcher.py  eulisa_parser.py  eures_fetcher.py  eures_parser.py  gemini_validator.py  html_exporter.py  interfaces.py  keyword_filter.py  keywords.yaml  main.py  notifier.py  sagulpa_fetcher.py  sagulpa_parser.py  text_cleaner.py
tests/: conftest.py  test_aena_parser.py  test_boc_parser.py  test_boe_parser.py  test_bop_parser.py  test_eu_sources.py  test_html_exporter.py  test_keyword_filter.py  test_sagulpa_parser.py
tests/fixtures/: aena_ofertas_empleo.html  aena_pagina_oferta.html  boc_sample.xml  boe_sample.xml  epso_ckan_response.json  epso_sample.csv  eulisa_careers.html  eures_xhr_response.json  sagulpa_ofertas_empleo.html  sagulpa_pagina_oferta.html  sagulpa_pagina_oferta_2.html
