[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-finder"
version = "0.1.0"
description = "A CLI tool that monitors BOP Las Palmas, BOC, and BOE for IT job openings"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Antigravity", email = "antigravity@google.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "pdfplumber>=0.11.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
job-finder = "job_finder.main:main"
bo-finder = "job_finder.main:main"

[tool.setuptools.packages.find]
where = ["src"]
